@@ -821,15 +821,16 @@ logLik.nls <- function(object, REML = FALSE, ...)
 {
     if (REML)
         stop("cannot calculate REML log-likelihood for \"nls\" objects")
-    res <- object$m$resid()
+    res <- object$m$resid() # These are weighted residuals.
     N <- length(res)
     w <- object$weights %||% rep_len(1, N)
     ## Note the trick for zero weights
     zw <- w == 0
-    val <-  -N * (log(2 * pi) + 1 - log(N) - sum(log(w + zw)) + log(sum(w*res^2)))/2
+    N <- sum(!zw)
+    val <-  -N * (log(2 * pi) + 1 - log(N) - sum(log(w + zw))/N + log(sum(res^2)))/2
     ## the formula here corresponds to estimating sigma^2.
     attr(val, "df") <- 1L + length(coef(object))
-    attr(val, "nobs") <- attr(val, "nall") <- sum(!zw)
+    attr(val, "nobs") <- attr(val, "nall") <- N
     class(val) <- "logLik"
     val
 }
